@@ -47,6 +47,8 @@ class TilePattern {
     const Size& get_size() const;
     Ground get_ground() const;
 
+    static void initialize();
+    static void quit();
     static void update();
     void fill_surface(
         const SurfacePtr& dst_surface,
